<?xml version="1.0"?>
<package>
  <name>vncc_msgs</name>
  <version>0.0.0</version>
  <description>Message and service call definitions for VNCC interaction</description>
  <license>BSD</license>
  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shushman@todo.todo">shushman</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
</package>
